--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,4 +6,141 @@ body {
   width: 100vw;
   max-width: 100vw;
   box-sizing: border-box;
+  --text-main: rgba(245, 245, 220, 0.808);
+  --text-bright: beige;
+  --background-body: rgb(5, 5, 31);
+}
+
+input {
+  background-color: black;
+}
+
+#root {
+  width: 80vw;
+  margin: auto;
+  display: grid;
+}
+
+*:focus {
+  outline: 4px solid yellow;
+}
+
+main {
+  margin-top: 24px;
+  min-height: 100vh;
+}
+
+.button {
+  position: relative;
+  box-sizing: border-box;
+  padding: 1rem 3rem;
+  font-size: 1.5rem;
+  border-radius: 4px;
+  margin-right: 3rem;
+  background: black;
+}
+
+.yes {
+  border: 4px solid #00a941;
+}
+.no {
+  border: 4px solid #ff5372
+}
+.dont-know {
+  border: 4px solid var(--text-main)
+}
+
+.yes::before, .no::before, .dont-know::before {
+  content: '';
+  display: block;
+  position: absolute;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.no::before {
+  border: 4px solid #e7e000;
+}
+.yes::before {
+  border: 4px solid #00b7f7;
+}
+.dont-know::before {
+  border: 4px solid var(--text-main);
+}
+
+.signup {
+  border: none;
+  margin: 0;
+  padding: 1rem;
+  font-size: 2rem;
+  margin-top: 22vh;
+}
+
+.signup:focus-within {
+  outline: 2px solid yellow;
+}
+
+.signup .active {
+  outline: 4px solid yellow;
+}
+
+.signup > legend {
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+}
+
+@media (max-width: 865px){
+.signup > label {
+  display: block;
+  margin-bottom: 2rem;
+}
+}
+input[type=radio] {
+  position:absolute;
+  left:-5000vw;
+}
+
+header {
+  width: 80vw;
+  display: flex;
+  justify-content: space-between;
+}
+
+header a, header a:visited {
+  padding: 0;
+  color: beige;
+  margin-top: 1rem;
+  display: inline;
+  text-transform: none;
+}
+
+a.button {
+  padding: 2rem;
+  box-sizing: border-box;
+  background-color: #000;
+  display: block;
+  color: beige;
+  text-align: center;
+  /* width: 80%; */
+  /* margin: auto; */
+  margin-top: 3rem;
+  font-size: 2.5rem;
+  border-radius: 4px;
+  text-transform: uppercase;
+}
+
+a:visited {
+  color: beige;
+}
+
+.questions-page h2 {
+  font-size: 2rem;
+  margin-top: 5rem;
+}
+
+ul {
+  font-size: 1.5rem;
 }
